--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "add_time_to_url",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "add timestamp to url",
   "main": "addTimeToUrl.js",
   "scripts": {
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/luobotang/addTimeToUrl/issues"
   },
-  "homepage": "https://github.com/luobotang/addTimeToUrl#readme"
+  "homepage": "https://github.com/luobotang/addTimeToUrl#readme",
+  "devDependencies": {
+    "colors": "^1.1.2"
+  }
 }
